src/snapshots/hostlist_parser__tests__multiple items combined into regular and reverse order.snap
---
source: src/lib.rs
assertion_line: 363
expression: "parse(\"hostname[7-5], hostname[8,9], hostname[3,2,1]\")"

---
Ok(
    [
        "hostname7",
        "hostname6",
        "hostname5",
        "hostname8",
        "hostname9",
        "hostname3",
        "hostname2",
        "hostname1",
    ],
)
