src/snapshots/hostlist_parser__tests__no prefix to prefix should throw an error.snap
---
source: src/lib.rs
expression: "parse(\"hostname[9-0011]\").unwrap_err()"
---
Errors {
    position: 9,
    errors: [
        Unexpected(
            Static(
                "larger end padding",
            ),
        ),
    ],
}
