src/snapshots/hostlist_parser__tests__parse-2.snap
---
source: src/lib.rs
expression: "parse(\"oss1.local\")"
---
Ok(
    {
        "oss1.local",
    },
)
