src/snapshots/hostlist_parser__tests__range-2.snap
---
source: src/lib.rs
expression: "range().easy_parse(\"[1,2,3-5]\")"
---
Ok(
    (
        [
            Disjoint(
                [
                    (
                        0,
                        1,
                    ),
                    (
                        0,
                        2,
                    ),
                ],
            ),
            Range(
                0,
                true,
                3,
                5,
            ),
        ],
        "",
    ),
)
