src/snapshots/hostlist_parser__tests__range-3.snap
---
source: src/lib.rs
expression: "range().easy_parse(\"[1,2,3-5,6,7,8-10]\")"
---
Ok(
    (
        [
            Disjoint(
                [
                    1,
                    2,
                ],
            ),
            Range(
                0,
                3,
                5,
            ),
            Disjoint(
                [
                    6,
                    7,
                ],
            ),
            Range(
                0,
                8,
                10,
            ),
        ],
        "",
    ),
)
