src/snapshots/hostlist_parser__tests__range-4.snap
---
source: src/lib.rs
expression: "range().easy_parse(\"[01-10]\")"
---
Ok(
    (
        [
            Range(
                1,
                false,
                1,
                10,
            ),
        ],
        "",
    ),
)
