src/snapshots/hostlist_parser__tests__range.snap
---
source: src/lib.rs
expression: "range().easy_parse(\"[1,2,3,4,5]\")"
---
Ok(
    (
        [
            Disjoint(
                [
                    1,
                    2,
                    3,
                    4,
                    5,
                ],
            ),
        ],
        "",
    ),
)
