src/snapshots/hostlist_parser__tests__range_digits-2.snap
---
source: src/lib.rs
expression: "range_digits().easy_parse(\"001 -  003\")"
---
Ok(
    (
        Range(
            2,
            true,
            1,
            3,
        ),
        "",
    ),
)
